--- a/index.html
+++ b/index.html
@@ -31,25 +31,31 @@
                     <a href="">Views all pages</a>
                   </div>
                 </div>
-                <div class="menu-item">
-                  <ul class="item-left">
-                    <li>SERVICES</li>
-                    <li><a href="">Coworking</a></li>
-                    <li><a href="">Rental</a></li>
-                    <li><a href="">Job Listing</a></li>
-                    <li>APPS</li>
-                    <li><a href="">Desktop</a></li>
-                    <li><a href="">Mobile</a></li>
-                  </ul>
-                  <ul class="item-left">
-                    <li>WEB</li>
-                    <li><a href="">Basic</a></li>
-                    <li><a href="">Start up (NEW)</a></li>
-                    <li><a href="">Enterprise</a></li>
-                    <li><a href="">Service</a></li>
-                    <li><a href="">Cloud Hosting</a></li>
-                    <li><a href="">Agency</a></li>
-                  </ul>
+                <div class="menu-item-wrap">
+                  <div class="menu-item">
+                    <div class="item-left">
+                      <ul class="left-top">
+                        <li>SERVICES</li>
+                        <li><a href="">Coworking</a></li>
+                        <li><a href="">Rental</a></li>
+                        <li><a href="">Job Listing</a></li>
+                      </ul>
+                      <ul class="left-bottom">
+                        <li>APPS</li>
+                        <li><a href="">Desktop</a></li>
+                        <li><a href="">Mobile</a></li>
+                      </ul>
+                    </div>
+                    <ul class="item-right">
+                      <li>WEB</li>
+                      <li><a href="">Basic</a></li>
+                      <li><a href="">Start up (NEW)</a></li>
+                      <li><a href="">Enterprise</a></li>
+                      <li><a href="">Service</a></li>
+                      <li><a href="">Cloud Hosting</a></li>
+                      <li><a href="">Agency</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
