--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landkit</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_menu.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -19,7 +19,7 @@
       <div class="menu">
         <ul class="dropdown">
           <li>
-            Landings
+            <p>Landings</p>
             <div class="menu-content">
               <div class="wrap">
                 <div class="picture">
@@ -62,54 +62,57 @@
           </li>
 
           <li>
-            Pages
+            <p>Pages</p>
             <div class="menu-content">
-              <div class="menu-item">
-                <ul class="item">
-                  <li>CAREER</li>
-                  <li><a href="">Listing</a></li>
-                  <li><a href="">Rental</a></li>
-                  <li><a href="">Opening</a></li>
-                  <li>COMPANY</li>
-                  <li><a href="">About</a></li>
-                  <li><a href="">Pricing</a></li>
-                  <li><a href="">Term</a></li>
-                </ul>
-                <ul class="item">
-                  <li>HELP CENTER</li>
-                  <li><a href="">Overview</a></li>
-                  <li><a href="">Article</a></li>
-                  <li>CONTACT</li>
-                  <li><a href="">Basic</a></li>
-                  <li><a href="">Cover</a></li>
-                </ul>
-                <ul class="item">
-                  <li>BLOG</li>
-                  <li><a href="">Rich View</a></li>
-                  <li><a href="">Article</a></li>
-                  <li><a href="">Showcaes</a></li>
-                  <li><a href="">Search</a></li>
-                </ul>
-                <ul class="item">
-                  <li>PORTFOLIO (NEW)</li>
-                  <li><a href="">Masonry</a></li>
-                  <li><a href="">Grid Rows</a></li>
-                  <li><a href="">Parallax</a></li>
-                  <li><a href="">Case Study</a></li>
-                  <li><a href="">Sidebar</a></li>
-                  <li><a href="">Sidebar: Fluid</a></li>
-                  <li><a href="">Basic grid</a></li>
-                </ul>
+              <div class="menu-item-wrap">
+                <div class="menu-item">
+                  <ul class="item">
+                    <li>CAREER</li>
+                    <li><a href="">Listing</a></li>
+                    <li><a href="">Rental</a></li>
+                    <li><a href="">Opening</a></li>
+                    <li>COMPANY</li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Term</a></li>
+                  </ul>
+                  <ul class="item">
+                    <li>HELP CENTER</li>
+                    <li><a href="">Overview</a></li>
+                    <li><a href="">Article</a></li>
+                    <li>CONTACT</li>
+                    <li><a href="">Basic</a></li>
+                    <li><a href="">Cover</a></li>
+                  </ul>
+                  <ul class="item">
+                    <li>BLOG</li>
+                    <li><a href="">Rich View</a></li>
+                    <li><a href="">Article</a></li>
+                    <li><a href="">Showcaes</a></li>
+                    <li><a href="">Search</a></li>
+                  </ul>
+                  <ul class="item">
+                    <li>PORTFOLIO (NEW)</li>
+                    <li><a href="">Masonry</a></li>
+                    <li><a href="">Grid Rows</a></li>
+                    <li><a href="">Parallax</a></li>
+                    <li><a href="">Case Study</a></li>
+                    <li><a href="">Sidebar</a></li>
+                    <li><a href="">Sidebar: Fluid</a></li>
+                    <li><a href="">Basic grid</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </li>
 
           <li>
-            Account
+            <p>Account</p>
+
             <div class="menu-content">
               <div class="menu-item">
                 <ul>
-                  <li>
+                  <li class="item">
                     <a href="">Setting(NEW)</a>
                     <i class="fas fa-chevron-right"></i>
                     <div class="sub-menu">
@@ -122,7 +125,7 @@
                       </ul>
                     </div>
                   </li>
-                  <li>
+                  <li class="item">
                     <a href="">Sign In</a>
                     <i class="fas fa-chevron-right"></i>
                     <div class="sub-menu">
@@ -135,7 +138,7 @@
                       </ul>
                     </div>
                   </li>
-                  <li>
+                  <li class="item">
                     <a href="">Sign Up</a>
                     <i class="fas fa-chevron-right"></i>
                     <div class="sub-menu">
@@ -148,7 +151,7 @@
                       </ul>
                     </div>
                   </li>
-                  <li>
+                  <li class="item">
                     <a href="">Password Reset</a>
                     <i class="fas fa-chevron-right"></i>
                     <div class="sub-menu">
@@ -159,7 +162,7 @@
                       </ul>
                     </div>
                   </li>
-                  <li>
+                  <li class="item">
                     <a href="">Error</a>
                     <i class="fas fa-chevron-right"></i>
                     <div class="sub-menu">
@@ -176,7 +179,7 @@
           </li>
 
           <li>
-            Documentation
+            <p>Documentation</p>
             <div class="menu-content">
               <div class="menu-item">
                 <ul>
@@ -186,26 +189,33 @@
                         <i class="fal fa-clipboard-list"></i>
                       </div>
                       <div class="doc-content">
-                        <h6>DOCUMENTATION</h6>
+                        <h4>DOCUMENTATION</h4>
                         <p>Customizing and building</p>
                       </div>
                     </div>
+                  </li>
+                  <li>
                     <div class="doc-item">
                       <div class="doc-icon">
                         <i class="fad fa-th-large"></i>
                       </div>
                       <div class="doc-content">
-                        <h6>COMPONENTS</h6>
+                        <h4>COMPONENTS</h4>
                         <p>Full list of components</p>
                       </div>
                     </div>
+                  </li>
+                  <li>
                     <div class="doc-item">
                       <div class="doc-icon">
                         <i class="fal fa-file-alt"></i>
                       </div>
                       <div class="doc-content">
-                        <h6>CHANGELOG</h6>
+                        <h4>CHANGELOG</h4>
                         <p>Keep track of changes</p>
+                      </div>
+                      <div class="version">
+                        1.2.0
                       </div>
                     </div>
                   </li>
