--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landkit</title>
     <link rel="stylesheet" href="style_menu.css" />
+    <link rel="stylesheet" href="style_welcome.css" />
+    <link rel="stylesheet" href="style_introduce.css" />
+    <link rel="stylesheet" href="style_social.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -12,7 +15,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <div class="header container">
       <div class="logo">
         <img src="images/brand.svg" alt="" />
       </div>
@@ -227,6 +230,84 @@
       </div>
       <div class="btn-header">
         <a href="">Buy Now</a>
+      </div>
+    </div>
+
+    <div class="welcome container">
+      <div class="content">
+        <div class="title">
+          <p>Welcome to <span style="color: #335eea;">Landkit</span>.</p>
+          <p>Develop anything.</p>
+        </div>
+        <div class="text">
+          Build a beautiful, modern website with flexible Bootstrap components
+          built from scratch.
+        </div>
+        <div class="button">
+          <a href="" class="dark"
+            >View all pages <i class="far fa-arrow-right"></i
+          ></a>
+          <a href="" class="light">Documentation</a>
+        </div>
+      </div>
+      <div class="image">
+        <img src="images/illustration-2.png" alt="" />
+      </div>
+    </div>
+
+    <div class="introduce container">
+      <div class="intro-item">
+        <div class="icon">
+          <img src="images/toggle.svg" alt="" />
+        </div>
+        <div class="title">Built for developers</div>
+        <div class="content">
+          Landkit is built to make your life easier. Variables, build tooling,
+          documentation, and reusable components.
+        </div>
+      </div>
+      <div class="intro-item">
+        <div class="icon">
+          <img src="images/component.svg" alt="" />
+        </div>
+        <div class="title">Designed to be modern</div>
+        <div class="content">
+          Designed with the latest design trends in mind. Landkit feels modern,
+          minimal, and beautiful.
+        </div>
+      </div>
+      <div class="intro-item">
+        <div class="icon">
+          <img src="images/closetag.svg" alt="" />
+        </div>
+        <div class="title">Documentation for everything</div>
+        <div class="content">
+          We've written extensive documentation for components and tools, so you
+          never have to reverse engineer anything.
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <div class="social container">
+        <div class="social-item">
+          <img src="images/airbnb.svg" alt="" />
+        </div>
+        <div class="social-item">
+          <img src="images/coinbase.svg" alt="" />
+        </div>
+        <div class="social-item">
+          <img src="images/dribbble.svg" alt="" />
+        </div>
+        <div class="social-item">
+          <img src="images/insta.svg" alt="" />
+        </div>
+        <div class="social-item">
+          <img src="images/netflix.svg" alt="" />
+        </div>
+        <div class="social-item">
+          <img src="images/pinterest.svg" alt="" />
+        </div>
       </div>
     </div>
   </body>
