--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="style_welcome.css" />
     <link rel="stylesheet" href="style_introduce.css" />
     <link rel="stylesheet" href="style_social.css" />
+    <link rel="stylesheet" href="style_download.css" />
+    <link rel="stylesheet" href="style_bootstrap.css" />
+    <link rel="stylesheet" href="style_customer.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.11.0/css/all.css"
     />
   </head>
 
@@ -288,7 +295,7 @@
       </div>
     </div>
 
-    <div class="wrapper">
+    <div class="wrapper-social">
       <div class="social container">
         <div class="social-item">
           <img src="images/airbnb.svg" alt="" />
@@ -310,5 +317,116 @@
         </div>
       </div>
     </div>
+
+    <div class="wrapper-download">
+      <div class="download container">
+        <div class="form">
+          <div class="form-image">
+            <img src="images/photo-2.jpg" alt="">
+          </div>
+          <div class="form-input">
+            <input type="text" class="input-item" placeholder="Name"> 
+            <input type="text" class="input-item" placeholder="Email"> 
+            <input type="text" class="input-item" placeholder="Password"> 
+          </div>
+          <div class="submit">
+            <a href="">Download a sample</a>
+          </div>
+        </div>
+        <div class="content">
+          <div class="title">
+            The most useful resource <br>
+            <span style="color: #42ba96;">created for developers.</span> 
+          </div>
+          <div class="text">
+            Using Landkit to build your site means never worrying about designing another page or cross browser compatibility. Our ever-growing library of components and pre-designed layouts will make your life easier.
+          </div>
+          <div class="list">
+            <div class="list-child list-left">
+              <div class="list-item">
+                <i class="fas fa-check"></i>Lifetime updates
+              </div>
+              <div class="list-item">
+                <i class="fas fa-check"></i>Tons of assets
+              </div>
+            </div>
+            <div class="list-child list-right">
+              <div class="list-item">
+                <i class="fas fa-check"></i>Tech support
+              </div>
+              <div class="list-item">
+                <i class="fas fa-check"></i>Integration ready
+              </div> 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper-bootstrap">
+      <div class="bootstrap container">
+        <div class="content">
+          <div class="title">
+            We have lots of experience <br>
+            <span style="color: #335eea;">building Bootstrap themes</span>.
+          </div>
+          <div class="text">
+            We've built well over a dozen Bootstrap themes and sold tens of thousands of copies.
+          </div>
+          <div class="item item-1">
+            <div class="icon">
+              <img src="images/circle.svg" alt="">
+            </div>
+            <div class="item-content">
+              <p>Bootstrap users since the beginning</p>
+              <p>We've been developing with Bootstrap since it was publicly released in 2011.</p>
+            </div>
+          </div>
+          <div class="item item-2">
+            <div class="icon">
+              <img src="images/closetag.svg" alt="">
+            </div>
+            <div class="item-content">
+              <p>Deep understanding of Bootstrap</p>
+              <p>We've watched Bootstrap grow up over the years and understand it better than almost anyone.</p>
+            </div>
+          </div>
+        </div>
+        <div class="image">
+          <img src="images/dashkit.jpg" alt="">
+        </div>
+      </div>
+    </div>
+    
+    <div class="wrapper-customer">
+      <div class="customer container">
+        <div class="title">
+          <div class="text1">
+            Our customers are our biggest fans.
+          </div>
+          <div class="text2">
+            We dont' like to brag, but we don't mind letting our customers do it for us. <br>
+            Here are a few nice things folks have said about our themes over the years.
+          </div>
+        </div>
+        <div class="slide">
+          <div class="image">
+            <img src="images/photo-1.jpg" alt="">
+          </div>
+          <div class="content">
+            <div class="branch">
+              <img src="images/airbnbred.svg" alt="">
+            </div>
+            <div class="content-text">
+              Landkit is hands down the most useful front end Bootstrap theme I've ever used. I can't wait to use it again for my next project.
+            </div>
+            <div class="name">
+              Dave Gamache
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
   </body>
 </html>
