--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="style_download.css" />
     <link rel="stylesheet" href="style_bootstrap.css" />
     <link rel="stylesheet" href="style_customer.css" />
+    <link rel="stylesheet" href="style_business.css" />
+    <link rel="stylesheet" href="style_price.css" />
+    <link rel="stylesheet" href="style_getstarted.css" />
+    <link rel="stylesheet" href="style_footer.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.11.0/css/all.css"
@@ -28,7 +33,7 @@
       </div>
       <div class="menu">
         <ul class="dropdown">
-          <li>
+          <li class="dropdown-1">
             <p>Landings</p>
             <div class="menu-content">
               <div class="wrap">
@@ -71,7 +76,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="dropdown-2">
             <p>Pages</p>
             <div class="menu-content">
               <div class="menu-item-wrap">
@@ -116,7 +121,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="dropdown-3">
             <p>Account</p>
 
             <div class="menu-content">
@@ -188,7 +193,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="dropdown-4">
             <p>Documentation</p>
             <div class="menu-content">
               <div class="menu-item">
@@ -252,8 +257,8 @@
         </div>
         <div class="button">
           <a href="" class="dark"
-            >View all pages <i class="far fa-arrow-right"></i
-          ></a>
+            >View all pages <i class="far fa-arrow-right"></i>
+          </a>
           <a href="" class="light">Documentation</a>
         </div>
       </div>
@@ -418,11 +423,299 @@
               <img src="images/airbnbred.svg" alt="">
             </div>
             <div class="content-text">
-              Landkit is hands down the most useful front end Bootstrap theme I've ever used. I can't wait to use it again for my next project.
+              "Landkit is hands down the most useful front end Bootstrap theme I've ever used. I can't wait to use it again for my next project."
             </div>
             <div class="name">
-              Dave Gamache
+              DAVE GAMACHE
             </div>
+          </div>
+          <div class="arrow">
+            <button class="previous">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="next">
+              <i class="fas fa-arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+
+    <div class="wrapper-business">
+      <div class="business container">
+        <div class="content">
+          <div class="title">
+            Stay focused on your business.<br>
+            <span style="color: #335eea;">Let us handle the design</span>.
+          </div>
+          <div class="text">
+            You have a business to run. Stop worring about cross-browser bugs, designing new pages, keeping your components up to date. Let us do that for you.
+          </div>
+          <div  class="data">
+            <div class="data-item">
+              <div class="number">
+                100%
+              </div>
+              <div class="object">
+                Satisfaction
+              </div>
+            </div>
+            <div class="data-item">
+              <div class="number">
+                24/ 7
+              </div>
+              <div class="object">
+                Support
+              </div>
+            </div>
+            <div class="data-item">
+              <div class="number">
+                100k+
+              </div>
+              <div class="object">
+                Sales
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="image">
+          <img src="images/illustration-8.png" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper-price">
+      <div class="price container">
+        <div class="title">
+          Fair, simple pricing for all.
+        </div>
+        <div class="text">
+          All types of businesses need access to development resources, so we give you the option to decide how much you need to use.
+        </div>
+        <div class="toggle">
+          <span>Annual</span>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <span>Monthly</span>
+        </div>
+        <div class="card">
+          <div class="card-item card-left">
+            <div class="label">
+              STANDARD
+            </div>
+            <div class="number" style="font-size: 60px;">
+              <div>
+                <sup style="font-size: 30px; margin-right: -10px;">$</sup> 29<span style="font-size: 30px; padding-left: 0px;"> /mo</span>
+              </div>
+            </div>
+            <div>
+              <span style="color: #8b9ebb; font-size: 20px;">per seat</span>
+            </div>
+            <div class="list">
+              <div class="list-item">
+                <i class="fas fa-check"></i>
+                Rich, responsive landing pages
+              </div>
+              <div class="list-item">
+                <i class="fas fa-check"></i>
+                100+ styled components
+              </div>
+              <div class="list-item">
+                <i class="fas fa-check"></i>
+                Flexible, simple license
+              </div>
+              <div class="list-item">
+                <i class="fas fa-check"></i>
+                Speedy build tooling
+              </div>
+              <div class="list-item">
+                <i class="fas fa-check"></i>
+                6 months free support included
+              </div>
+            </div>
+            <div class="button">
+              Get it now
+            </div>
+          </div>
+          <div class="card-item card-right">
+            <div class="label">
+              ENTERPRISE
+            </div>
+            <div class="text-content">
+              We offer variable pricing with discounts for larger organizations. Get in touch with us and we’ll figure out something that works for everyone.
+            </div>
+            <div class="button">
+              Contact us
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper-getstarted">
+      <div class="question container">
+        <div class="question-list list-left">
+          <div class="question-item">
+            <div class="icon">?</div>
+            <div class="q-a">
+              <div class="q">
+                Can I use Landkit for my clients?
+              </div>
+              <div class="a">
+                Absolutely. The Bootstrap Themes license allows you to build a websites for personal use or for a client.
+              </div>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="icon">?</div>
+            <div class="q-a">
+              <div class="q">
+                Do I get free updates?
+              </div>
+              <div class="a">
+                Yes. We update all of our themes with each Bootstrap update, plus are constantly adding new components, pages, and features to our themes.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="question-list list-right">
+          <div class="question-item">
+            <div class="icon">?</div>
+            <div class="q-a">
+              <div class="q">
+                Is there a money back guarantee?
+              </div>
+              <div class="a">
+                Yup! Bootstrap Themes come with a satisfaction guarantee. Submit a return and get your money back.
+              </div>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="icon">?</div>
+            <div class="q-a">
+              <div class="q">
+                Does it work with Rails? React? Laravel?
+              </div>
+              <div class="a">
+                Yes. Landkit has basic CSS/JS files you can include. If you want to enable deeper customization, you can integrate it into your assets pipeline or build processes.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="get-buy container">
+        <div class="label">
+          GET STARTED
+        </div>
+        <div class="title">
+          Get Landkit and save your time.
+        </div>
+        <div class="text">
+          Stop wasting time trying to do it the "right way" and build a site from scratch. Landkit is faster, easier, and you still have complete control.
+        </div>
+        <div class="button">
+          <a href="">
+            Buy it now! <i class="far fa-arrow-right"></i>
+          </a> 
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper-footer">
+      <div class="footer container">
+        <div class="network">
+          <div class="logo">
+            <img src="images/brand.svg" alt="">
+          </div>
+          <div class="text">
+            A better way to build.
+          </div>
+          <div class="image">
+            <img src="images/instagram.svg" alt="">
+            <img src="images/facebook.svg" alt="">
+            <img src="images/twitter.svg" alt="">
+            <img src="images/pinterest (1).svg" alt="">
+          </div>
+        </div>
+        <div class="footer-list">
+          <span class="title">
+            PRODUCT
+          </span>
+          <div class="item">
+            <a href="">Page Builder</a>
+          </div>
+          <div class="item">
+            <a href="">UI Kit</a>
+          </div>
+          <div class="item">
+            <a href="">Styleguide</a>
+          </div>
+          <div class="item">
+            <a href="">Documentation</a>
+          </div>
+          <div class="item">
+            <a href="">Changelog</a>
+          </div>
+        </div>
+        <div class="footer-list">
+          <span class="title">
+            SERVICES
+          </span>
+          <div class="item">
+            <a href="">Documentation</a>
+          </div>
+          <div class="item">
+            <a href="">Changelog</a>
+          </div>
+          <div class="item">
+            <a href="">Pagebuilder</a>
+          </div>
+          <div class="item">
+            <a href="">UI Kit</a>
+          </div>
+        </div>
+        <div class="footer-list">
+          <span class="title">
+            CONNECT
+          </span>
+          <div class="item">
+            <a href="">Page Builder</a>
+          </div>
+          <div class="item">
+            <a href="">UI Kit</a>
+            
+          </div>
+          <div class="item">
+            <a href="">Styleguide</a>
+          </div>
+          <div class="item">
+            <a href="">Documentation</a>
+          </div>
+          <div class="item">
+            <a href="">Changelog</a>
+          </div>
+          <div class="item">
+            <a href="">Documentation</a>
+          </div>
+          <div class="item">
+            <a href="">Changelog</a>
+          </div>
+        </div>
+        <div class="footer-list">
+          <span class="title">
+            LEGAL
+          </span>
+          <div class="item">
+            <a href="">Documentation</a>
+          </div>
+          <div class="item">
+            <a href="">Changelog</a>
+          </div>
+          <div class="item">
+            <a href="">Pagebuilder</a>
           </div>
         </div>
       </div>
