--- a/index.html
+++ b/index.html
@@ -561,6 +561,11 @@
     </div>
 
     <div class="wrapper-getstarted">
+      <div class="position-relative mt-n15">
+        <div class="shape shape-bottom shape-fluid-x svg-shim text-dark">
+          <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"></path></svg>
+        </div>
+      </div>
       <div class="question container">
         <div class="question-item">
           <div class="icon">?</div>
@@ -621,6 +626,11 @@
           <a href="">
             Buy it now! <i class="far fa-arrow-right"></i>
           </a> 
+        </div>
+      </div>
+      <div class="position-relative bottom">
+        <div class="shape shape-bottom shape-fluid-x svg-shim text-gray-200">
+          <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"></path></svg>
         </div>
       </div>
     </div>
